--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,5 +7,9 @@ html
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    h1 Welcome to Slim 
+    h1 Welcome to TAD
+    - flash.each do |k, v|
+        div #{v}
+
     = yield
+
