override normal font weight

--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -34,3 +34,4 @@ $btn-border-radius: 0;
 $alert-border-radius: 0;
 $input-border-radius: 0;
 $input-border-color: #dee2e6;
+$font-weight-normal: 350;
