style graph control buttons

--- a/app/views/shared/_sidebar.html.slim
+++ b/app/views/shared/_sidebar.html.slim
@@ -7,5 +7,5 @@ nav id="sidebar"
         li class="sidebar_nav-link"
             p test2
         li class="sidebar_nav-link"
-            p test3 
+            = button_to "Sign out", :destroy_admin_session, method: :delete
     
