--- a/app/views/overview/hires/index.html.slim
+++ b/app/views/overview/hires/index.html.slim
@@ -2,27 +2,29 @@
 
 / = line_chart charts_new_hires_years_months_url, defer: true, download: true
 = form_tag(charts_change_graph_settings_path, remote: true) do 
-    div class="dropdown"
-        button class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" Graph type
-        div class="dropdown-menu" aria-labelledby="dropdownMenuButton"
-            div class="dropdown-item" 
-                div class="custom-control custom-radio"
-                    input type="radio" class="custom-control-input" id="customRadio1" value="line" name="graph_type" checked=true
-                    label class="custom-control-label" for="customRadio1" Line
-            div class="dropdown-item" 
-                div class="custom-control custom-radio"
-                    input type="radio" class="custom-control-input" id="customRadio2" value="column" name="graph_type"
-                    label class="custom-control-label" for="customRadio2" Bar
+    div class="container mb-3"
+        div class="row justify-content-end"
+            div class="col-12 col-sm-8 d-flex justify-content-end"
+                div class="dropdown"
+                    button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Graph type
+                    div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton"
+                        div class="dropdown-item" 
+                            div class="custom-control custom-radio"
+                                input type="radio" class="custom-control-input" id="customRadio1" value="line" name="graph_type" checked=true
+                                label class="custom-control-label" for="customRadio1" Line
+                        div class="dropdown-item" 
+                            div class="custom-control custom-radio"
+                                input type="radio" class="custom-control-input" id="customRadio2" value="column" name="graph_type"
+                                label class="custom-control-label" for="customRadio2" Bar
+                div class="dropdown ml-2"
+                    button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Years
+                    div class="dropdown-menu dropdown-menu-right"
+                        - get_years.each do |year| 
+                            div class="dropdown-item"
+                                div class="custom-control custom-checkbox"
+                                    input type="checkbox" class="custom-control-input" value="#{year}" id="#{year}" name="years[]" checked=true
+                                    label class="custom-control-label" for="#{year}" #{year}
 
-    div class="dropdown"
-        button class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" Years
-        div class="dropdown-menu"
-            - get_years.each do |year| 
-                div class="dropdown-item"
-                    div class="custom-control custom-checkbox"
-                        input type="checkbox" class="custom-control-input" value="#{year}" id="#{year}" name="years[]" checked=true
-                        label class="custom-control-label" for="#{year}" #{year}
-    
-    = submit_tag("Apply changes")
-    
+                button type="submit" class="btn btn-primary button--submit ml-2" Apply
+        
 = render 'overview/hires/graph'
