edit graph buttons container

--- a/app/views/overview/hires/index.html.slim
+++ b/app/views/overview/hires/index.html.slim
@@ -2,7 +2,7 @@
 
 / = line_chart charts_new_hires_years_months_url, defer: true, download: true
 = form_tag(charts_change_graph_settings_path, remote: true) do 
-    div class="container mb-3"
+    div class="container-fluid mb-3"
         div class="row justify-content-end"
             div class="col-12 col-sm-8 d-flex justify-content-end"
                 div class="dropdown"
