--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,7 +1,8 @@
 doctype html 
 html
   head
-    title 
+    title
+    meta name="viewport" content="width=devise-width, initial-scale=1.0" 
     = csrf_meta_tag 
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
