--- a/app/views/layouts/dashboard.html.slim
+++ b/app/views/layouts/dashboard.html.slim
@@ -1,7 +1,8 @@
 doctype html 
 html
   head
-    title 
+    title
+    meta name="viewport" content="width=devise-width, initial-scale=1.0"  
     = csrf_meta_tag 
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
@@ -17,4 +18,3 @@ html
             div class="collapse" id="collapsed-menu"
                 p Test1 
             = yield
-
