make pusher channel private

--- a/app/views/layouts/dashboard.html.slim
+++ b/app/views/layouts/dashboard.html.slim
@@ -19,3 +19,5 @@ html
             div class="collapse" id="collapsed-menu"
                 p Test1 
             = yield
+
+    = render 'pusher/config'
