--- a/app/views/charts/hires/change_graph_settings.js.erb
+++ b/app/views/charts/hires/change_graph_settings.js.erb
@@ -1,1 +1,1 @@
-$('#hires-graph').replaceWith('<%= j render 'overview/hires/graph'%>');
+$('#years-months-hires-graph').replaceWith('<%= j render 'overview/hires/years-months-graph'%>');
