add hires per month graph control

--- a/app/views/overview/hires/_years-graph.html.slim
+++ b/app/views/overview/hires/_years-graph.html.slim
@@ -1,4 +1,5 @@
-= bar_chart charts_new_hires_years_path, xtitle: 'Hires', label: 'Hires', download: true
+div id="years-hires-graph"
+    = render_hires_ordered_by_years(@years)
 
 / [{name: "Series 1", data: {Hires:54}}, {name: "Series 2", data: {Hires: 45}}]
 / [["Football", 10], ["Basketball", 5]]
