--- a/app/views/overview/hires/index.html.slim
+++ b/app/views/overview/hires/index.html.slim
@@ -3,4 +3,5 @@ div class="dashboard_content-component"
     = render 'overview/hires/years-months-graph'
 
 div class="dashboard_content-component"
+    = render 'overview/hires/years-control'
     = render 'overview/hires/years-graph'
