add offer acceptance ratio formula

--- a/app/views/overview/hires/index.html.slim
+++ b/app/views/overview/hires/index.html.slim
@@ -1,4 +1,4 @@
-div class="dashboard_content-component"    
+div class="dashboard_content-component mb-4"    
     = render 'overview/hires/years-months-control'
     = render 'overview/hires/years-months-graph'
 
