round ratios to 2 decimal places

--- a/app/views/dashboard/overview/index.html.slim
+++ b/app/views/dashboard/overview/index.html.slim
@@ -7,4 +7,5 @@ div class="dashboard_content-component mb-4"
     = render 'dashboard/overview/hires/years-graph'
 
 div class="dashboard_content-component"
+    = render 'dashboard/overview/hires/offer-acceptance-ratios-control'
     = render 'dashboard/overview/hires/offer-acceptance-ratios-graph'
