--- a/app/views/dashboard/overview/hires/_offer-acceptance-ratios-control.html.slim
+++ b/app/views/dashboard/overview/hires/_offer-acceptance-ratios-control.html.slim
@@ -2,7 +2,7 @@
     div class="container-fluid mb-3 px-0"
         div class="row"
             div class="col-12 col-sm-5"
-                h4 Hires per year
+                h4 Offer acceptance ratios
             div class="col-12 col-sm-7 d-flex justify-content-end"
                 div class="dropdown ml-2"
                     button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Years
