add dashboard component header

--- a/app/views/dashboard/overview/hires/_offer-acceptance-ratios-control.html.slim
+++ b/app/views/dashboard/overview/hires/_offer-acceptance-ratios-control.html.slim
@@ -1,8 +1,9 @@
 = form_tag(charts_overview_change_years_graph_settings_path, remote: true) do 
     div class="container-fluid mb-3 px-0"
+        h4 Offer acceptance ratios
         div class="row"
             div class="col-12 col-sm-5"
-                h4 Offer acceptance ratios
+                / h4 Offer acceptance ratios
             div class="col-12 col-sm-7 d-flex justify-content-end"
                 div class="dropdown ml-2"
                     button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Years
