--- a/app/assets/stylesheets/_dashboard.scss
+++ b/app/assets/stylesheets/_dashboard.scss
@@ -18,9 +18,21 @@
     display: none;
 }
 
-.dashboard_content-component{
+.dashboard_content-container{
     background-color: map-get($plated-primary-palette, 'white');
     padding: 2rem;
+    height: 100%;
+}
+
+.dashboard_content-header-container{
+    background-color: map-get($plated-primary-palette, 'white');
+    padding: 1.5rem 2rem;
+    border-top: 4px solid map-get($plated-secondary-palette, "blueberry-pie");
+}
+
+.dashboard_content-header{
+    font-family: $font-family-serif;
+    font-weight: 600 !important;
 }
 
 // media query for medium devices (tablets, 768px and below) 
