--- a/app/assets/stylesheets/_gauge.scss
+++ b/app/assets/stylesheets/_gauge.scss
@@ -1,24 +1,24 @@
 .gauge-container {
   width: 100%;
-  height: 200px;
+  height: 40%;
 //   position: absolute;
   position: relative;
-  top: 30%;
+//   top: 30%;
 //   left: 50%;
   overflow: hidden;
   text-align: center;
 //   transform: translate(-50%, -50%);
 }
 
-.gauge-a {
+#gauge-a {
   z-index: 1;
 //   position: absolute;
   position: relative;
   background-color: red;
-  width: 100%;
-  height: 200px;
-  top: 0%;
-  border-radius: 250px 250px 0px 0px;
+  width: 200px;
+//   height: 100%;
+//   top: 0%;
+  border-radius: 200px 200px 0px 0px;
 }
 
 .gauge-b {
