edit offer acceptance ratio layout

--- a/app/assets/stylesheets/_dashboard.scss
+++ b/app/assets/stylesheets/_dashboard.scss
@@ -27,7 +27,7 @@
 .dashboard_content-header-container{
     background-color: map-get($plated-primary-palette, 'white');
     padding: 1.5rem 2rem;
-    border-top: 4px solid map-get($plated-secondary-palette, "blueberry-pie");
+    border-top: 4px solid map-get($plated-secondary-palette, "dinosaur-kale");
 }
 
 .dashboard_content-header{
