--- a/app/views/dashboard/overview/hires/_offer-acceptance-ratios-control.html.slim
+++ b/app/views/dashboard/overview/hires/_offer-acceptance-ratios-control.html.slim
@@ -1,6 +1,6 @@
 = form_tag(charts_overview_change_years_graph_settings_path, remote: true) do 
-    div class="container-fluid mb-3 px-0"
-        h4 Offer acceptance ratios
+    div class="container mb-3 px-0"
+        / h4 Offer acceptance ratios
         div class="row"
             div class="col-12 col-sm-5"
                 / h4 Offer acceptance ratios
