--- a/app/views/dashboard/overview/index.html.slim
+++ b/app/views/dashboard/overview/index.html.slim
@@ -1,23 +1,29 @@
-div class="dashboard_content-header-container mb-2"
-    h4 class="dashboard_content-header" Hires per month 
-div class="dashboard_content-container mb-4"    
-    = render 'dashboard/overview/hires/years-months-control'
-    = render 'dashboard/overview/hires/years-months-graph'
+div class="mb-4"
+    div class="dashboard_content-header-container mb-1"
+        h4 class="dashboard_content-header" Hires per month 
+    div class="dashboard_content-container"    
+        = render 'dashboard/overview/hires/years-months-control'
+        = render 'dashboard/overview/hires/years-months-graph'
 
-div class="dashboard_content-container mb-4"
-    = render 'dashboard/overview/hires/years-control'
-    = render 'dashboard/overview/hires/years-graph'
-
-div class="container-fluid"
-    div class="row"
-        div class="col-8"
-            div class="dashboard_content-container"
-                = render 'dashboard/overview/hires/offer-acceptance-ratios-control'
-                = render 'dashboard/overview/hires/offer-acceptance-ratios-graph'
-        div class="col-4"
-            div class="dashboard_content-container"
-                div class="gauge-container"
-                    div id="gauge-a"
+div class="mb-4"
+    div class="dashboard_content-header-container mb-1"
+        h4 class="dashboard_content-header" Hires per year
+    div class="dashboard_content-container"
+        = render 'dashboard/overview/hires/years-control'
+        = render 'dashboard/overview/hires/years-graph'
+div class="mb-4"
+    div class="dashboard_content-header-container mb-1"
+        h4 class="dashboard_content-header" Offer acceptance ratio
+    div class="container-fluid px-0"
+        div class="row"
+            div class="col-8 pr-1 pb-1"
+                div class="dashboard_content-container"
+                    = render 'dashboard/overview/hires/offer-acceptance-ratios-control'
+                    = render 'dashboard/overview/hires/offer-acceptance-ratios-graph'
+            div class="col-4 pl-0 pb-1"
+                div class="dashboard_content-container"
+                    div class="gauge-container"
+                        div id="gauge-a"
                     / div class="gauge-b"
                     / div class="gauge-c"
                     / div class="gauge-data"
