--- a/app/assets/stylesheets/_dashboard.scss
+++ b/app/assets/stylesheets/_dashboard.scss
@@ -21,7 +21,7 @@
 .dashboard_content-container{
     background-color: map-get($plated-primary-palette, 'white');
     padding: 2rem;
-    min-height: 10rem;
+    height: 100%;
 }
 
 .dashboard_content-header-container{
@@ -49,4 +49,16 @@
    .dashboard_toggle-menu-button{
        display: block;
    }
+}
+
+@include media-breakpoint-down(xs){
+    .dashboard_content-container--small-left{
+        padding-bottom: .25rem !important;
+    }
+}
+
+@include media-breakpoint-up(sm){
+    .dashboard_content-container--small-left{
+        padding-right: .25rem !important;
+    }
 }
