--- a/app/assets/stylesheets/_gauge.scss
+++ b/app/assets/stylesheets/_gauge.scss
@@ -1,6 +1,6 @@
 .gauge-container {
   width: 100%;
-  height: 40%;
+  min-height: 7rem;
 //   position: absolute;
   position: relative;
 //   top: 30%;
