--- a/app/views/dashboard/overview/index.html.slim
+++ b/app/views/dashboard/overview/index.html.slim
@@ -16,19 +16,19 @@ div class="mb-4"
     div class="dashboard_content-header-container mb-1"
         h4 class="dashboard_content-header" Offer acceptance ratios
     div class="container-fluid px-0"
-        div class="row pb-1"
-            div class="col-6"
+        div class="row pb-1 no-gutters"
+            div class="col-12 col-sm-6 dashboard_content-container--small-left" 
                 div class="dashboard_content-container"
-                    div class="gauge-container"
+                    div class="gauge-container d-flex justify-content-center"
                         div id="gauge-a"
                         / div class="gauge-b"
                         / div class="gauge-c"
                         / div class="gauge-data"
                         /     h1 id="percent"
                         /         = 4 + 4
-            div class="col-6"
+            div class="col-12 col-sm-6"
                 div class="dashboard_content-container"
-        div class="row"
+        div class="row no-gutters"
             div class="col-12"
                 div class="dashboard_content-container"
                     = render 'dashboard/overview/hires/offer-acceptance-ratios-control'
