make gauge responsive

--- a/app/views/dashboard/overview/index.html.slim
+++ b/app/views/dashboard/overview/index.html.slim
@@ -20,9 +20,9 @@ div class="mb-4"
             div class="col-12 col-sm-6 dashboard_content-container--small-left" 
                 div class="dashboard_content-container"
                     div class="gauge-container d-flex justify-content-center"
-                        div id="gauge-a"
-                        / div class="gauge-b"
-                        / div class="gauge-c"
+                        div id="gauge-outer-under" class="gauge-outer"
+                        div id="gauge-inner"
+                        div id="gauge-outer-over" class="gauge-outer"
                         / div class="gauge-data"
                         /     h1 id="percent"
                         /         = 4 + 4
