--- a/app/assets/stylesheets/_dashboard.scss
+++ b/app/assets/stylesheets/_dashboard.scss
@@ -35,30 +35,28 @@
     font-weight: 600 !important;
 }
 
-// media query for medium devices (tablets, 768px and below) 
+.dashboard_content-container--small-left{
+    padding-right: .25rem !important;
+    padding-bottom: 0 !important; 
+}
+
+
 // hide sidebar, expand content area, and show menu toggle button
-@media (max-width: 768px){
+@include media-breakpoint-down(sm){
     #sidebar{
         margin-left: -250px;
-    }
-
-   .dashboard_content{
+    }  
+    .dashboard_content{
        width: 100%;
-   } 
-
+    } 
    .dashboard_toggle-menu-button{
        display: block;
-   }
+    }
 }
 
 @include media-breakpoint-down(xs){
     .dashboard_content-container--small-left{
         padding-bottom: .25rem !important;
-    }
-}
-
-@include media-breakpoint-up(sm){
-    .dashboard_content-container--small-left{
-        padding-right: .25rem !important;
+        padding-right: 0 !important;
     }
 }
