add ratio data object as return value for ratio method

--- a/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-gauge.html.slim
+++ b/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-gauge.html.slim
@@ -1,4 +1,4 @@
 div class="gauge-container d-flex justify-content-center"
     div id="gauge-outer-under" class="gauge-outer"
     div id="gauge-inner"
-    div id="gauge-outer-over" class="gauge-outer" data-ratio="#{get_offer_acceptance_ratio_gauge_year_month}"
+    div id="gauge-outer-over" class="gauge-outer" data-ratio="#{get_offer_acceptance_ratio_gauge_year_month[:ratio]}"
