--- a/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-control.html.slim
+++ b/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-control.html.slim
@@ -1,27 +1,30 @@
-= form_tag(charts_overview_change_years_months_graph_settings_path, remote: true) do 
+= form_tag(charts_overview_change_year_month_ratio_settings_path, remote: true) do 
     div class="container-fluid mb-3 px-0"
         div class="row"
             div class="col-12 col-sm-5"
                 / h4 Hires per month
             div class="col-12 col-sm-7 d-flex justify-content-end"
+                div class="dropdown mr-1"
+                    button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Month
+                    div class="dropdown-menu dropdown-menu-right dashboard_month-dropdown"
+                        - get_months.each do |month, v| 
+                            div class="dropdown-item"
+                                div class="custom-control custom-radio"
+                                    - if v == Time.now().month
+                                        input type="radio" class="custom-control-input" value="#{v}" id="#{v}" name="month" checked=true
+                                    - else 
+                                        input type="radio" class="custom-control-input" value="#{v}" id="#{v}" name="month"
+                                    label class="custom-control-label" for="#{v}" #{month}
                 div class="dropdown"
-                    button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Type
-                    div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton"
-                        div class="dropdown-item" 
-                            div class="custom-control custom-radio"
-                                input type="radio" class="custom-control-input" id="customRadio1" value="line" name="graph_type" checked=true
-                                label class="custom-control-label" for="customRadio1" Line
-                        div class="dropdown-item" 
-                            div class="custom-control custom-radio"
-                                input type="radio" class="custom-control-input" id="customRadio2" value="column" name="graph_type"
-                                label class="custom-control-label" for="customRadio2" Bar
-                div class="dropdown ml-2"
-                    button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Years
+                    button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Year
                     div class="dropdown-menu dropdown-menu-right"
                         - get_years.each do |year| 
                             div class="dropdown-item"
-                                div class="custom-control custom-checkbox"
-                                    input type="checkbox" class="custom-control-input" value="#{year}" id="#{year}" name="years[]" checked=true
-                                    label class="custom-control-label" for="#{year}" #{year}
+                                div class="custom-control custom-radio"
+                                    - if year == Time.now().year 
+                                        input type="radio" class="custom-control-input" value="#{year}" id="#{year}-3" name="year" checked=true
+                                    - else 
+                                        input type="radio" class="custom-control-input" value="#{year}" id="#{year}-3" name="year"
+                                    label class="custom-control-label" for="#{year}-3" #{year}
                 div
                     button type="submit" class="btn btn-primary button--submit ml-2" Apply
