--- a/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-info.html.slim
+++ b/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-info.html.slim
@@ -1,3 +1,3 @@
 div
-    p Offers sent: <span> #{offer_acceptance_ratio_data_for_month_in_year(current: true)[:offers]} </span>
-    p Offers accepted: <span> #{offer_acceptance_ratio_data_for_month_in_year(current: true)[:accepted_offers]} </span>
+    p Offers sent: <span id="offer-acceptance-ratio_offers-sent"> #{offer_acceptance_ratio_data_for_month_in_year(current: true)[:offers]} </span>
+    p Offers accepted: <span id="offer-acceptance-ratio_offers-accepted"> #{offer_acceptance_ratio_data_for_month_in_year(current: true)[:accepted_offers]} </span>
