--- a/app/views/dashboard/overview/index.html.slim
+++ b/app/views/dashboard/overview/index.html.slim
@@ -21,6 +21,7 @@ div class="mb-4"
                 div class="dashboard_content-container"
                     = render 'dashboard/overview/offers/month-year-offer-acceptance-ratio-control'
                     = render 'dashboard/overview/offers/month-year-offer-acceptance-ratio-gauge'
+                    = render 'dashboard/overview/offers/month-year-offer-acceptance-ratio-date'
                     = render 'dashboard/overview/offers/month-year-offer-acceptance-ratio-info'
             div class="col-12 col-sm-6"
                 div class="dashboard_content-container"
