--- a/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-info.html.slim
+++ b/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-info.html.slim
@@ -1,3 +1,8 @@
-div
-    p Offers sent: <span id="offer-acceptance-ratio_offers-sent"> #{offer_acceptance_ratio_data_for_month_in_year(current: true)[:offers]} </span>
-    p Offers accepted: <span id="offer-acceptance-ratio_offers-accepted"> #{offer_acceptance_ratio_data_for_month_in_year(current: true)[:accepted_offers]} </span>
+div class="container mt-4 "
+    div class="row"
+        div class="col-12 col-md-6 text-center border-right border-top pt-3"
+            p id="offer-acceptance-ratio_offers-sent" class="font-weight-bold" #{offer_acceptance_ratio_data_for_month_in_year(current: true)[:offers]}
+            p class="font-weight-normal" Offers sent  
+        div class="col-12 col-md-6 text-center border-top pt-3"
+            p id="offer-acceptance-ratio_offers-accepted" class="font-weight-bold" #{offer_acceptance_ratio_data_for_month_in_year(current: true)[:accepted_offers]}
+            p class="font-weight-normal" Offers accepted 
