--- a/app/views/charts/overview/offers/change_year_month_ratio_settings.js.erb
+++ b/app/views/charts/overview/offers/change_year_month_ratio_settings.js.erb
@@ -1,3 +1,5 @@
-$('#gauge-outer-over').css('transform', 'rotate(<%= @data[:ratio] == 0.5 ? 0.5 : (0.5 * @data[:ratio]) %>turn)')
-$('#offer-acceptance-ratio_offers-sent').text('<%= @data[:offers] %>')
-$('#offer-acceptance-ratio_offers-accepted').text('<%= @data[:accepted_offers] %>')
+$('#gauge-outer-over').css('transform', 'rotate(<%= @data[:ratio] == 0.5 ? 0.5 : (0.5 * @data[:ratio]) %>turn)');
+$('#offer-acceptance-ratio_offers-sent').text('<%= @data[:offers] %>');
+$('#offer-acceptance-ratio_offers-accepted').text('<%= @data[:accepted_offers] %>');
+$('#gauge-data').text('<%= @data[:ratio] %>');
+$('#offer-acceptance-ratio_date').text('<%= @data[:date] %>');
