--- a/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-control.html.slim
+++ b/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-control.html.slim
@@ -1,5 +1,5 @@
 = form_tag(charts_overview_change_year_month_ratio_settings_path, remote: true) do 
-    div class="container-fluid mb-3 px-0"
+    div class="container-fluid px-0"
         div class="row"
             div class="col-12 col-sm-5"
                 / h4 Hires per month
