--- a/app/views/dashboard/overview/index.html.slim
+++ b/app/views/dashboard/overview/index.html.slim
@@ -17,13 +17,13 @@ div class="mb-4"
         h4 class="dashboard_content-header" Offer acceptance ratios
     div class="container-fluid px-0"
         div class="row pb-1 no-gutters"
-            div class="col-12 col-sm-6 dashboard_content-container--small-left" 
+            div class="col-12 col-md-6 dashboard_content-container--small-left" 
                 div class="dashboard_content-container"
                     = render 'dashboard/overview/offers/month-year-offer-acceptance-ratio-control'
                     = render 'dashboard/overview/offers/month-year-offer-acceptance-ratio-gauge'
                     = render 'dashboard/overview/offers/month-year-offer-acceptance-ratio-date'
                     = render 'dashboard/overview/offers/month-year-offer-acceptance-ratio-info'
-            div class="col-12 col-sm-6"
+            div class="col-12 col-md-6"
                 div class="dashboard_content-container"
         div class="row no-gutters"
             div class="col-12"
