--- a/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-control.html.slim
+++ b/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-control.html.slim
@@ -1,9 +1,7 @@
 = form_tag(charts_overview_change_year_month_ratio_settings_path, remote: true) do 
     div class="container-fluid px-0"
         div class="row"
-            div class="col-12 col-sm-5"
-                / h4 Hires per month
-            div class="col-12 col-sm-7 d-flex justify-content-end"
+            div class="col-12 d-flex justify-content-end"
                 div class="dropdown mr-1"
                     button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Month
                     div class="dropdown-menu dropdown-menu-right dashboard_month-dropdown"
