--- a/app/assets/stylesheets/_gauge.scss
+++ b/app/assets/stylesheets/_gauge.scss
@@ -4,27 +4,25 @@
   overflow: hidden;
 }
 
-#gauge-outer-under {
+.gauge-outer-under {
   z-index: 1;
   background-color: rgba(216, 216, 216, 0.541);
   position: absolute;
 }
 
-#gauge-inner {
+.gauge-inner {
   z-index: 3;
   position: absolute;
   background-color: white;
 }
 
-#gauge-outer-over {
+.gauge-outer-over {
   z-index: 2;
   position: absolute;
   background-color: #3366cc;
   transform-origin: center top;
   transition: transform 1.3s ease-in-out;
 }
-
-// .gauge-container:hover .gauge-data { color: rgba(255,255,255,1); }
 
 #gauge-data {
   z-index: 4;
@@ -33,12 +31,6 @@
   line-height: 25px;
   position: absolute;
   text-align: center;
-//   width: 400px;
-//   height: 200px;
-//   top: 90px;
-//   margin-left: auto;
-//   margin-right: auto;
-//   transition: all 1s ease-out;
 }
 
 
