--- a/app/views/dashboard/overview/index.html.slim
+++ b/app/views/dashboard/overview/index.html.slim
@@ -25,6 +25,10 @@ div class="mb-4"
                     = render 'dashboard/overview/offers/month-year-offer-acceptance-ratio-info'
             div class="col-12 col-md-6"
                 div class="dashboard_content-container"
+                    = render 'dashboard/overview/offers/year-offer-acceptance-ratio-control'
+                    = render 'dashboard/overview/offers/year-offer-acceptance-ratio-gauge'
+                    = render 'dashboard/overview/offers/year-offer-acceptance-ratio-year'
+                    = render 'dashboard/overview/offers/year-offer-acceptance-ratio-info'
         div class="row no-gutters"
             div class="col-12"
                 div class="dashboard_content-container"
