change graph change display method

--- a/app/views/dashboard/overview/offers/_offer-acceptance-ratios-control.html.slim
+++ b/app/views/dashboard/overview/offers/_offer-acceptance-ratios-control.html.slim
@@ -1,4 +1,4 @@
-= form_tag(charts_overview_change_years_graph_settings_path, remote: true) do 
+form id="offer-acceptance-ratios_form"
     div class="container mb-3 px-0"
         / h4 Offer acceptance ratios
         div class="row"
@@ -11,7 +11,7 @@
                         - get_years.each do |year| 
                             div class="dropdown-item"
                                 div class="custom-control custom-checkbox"
-                                    input type="checkbox" class="custom-control-input" value="#{year}" id="#{year}-4" name="years[]" checked=true
-                                    label class="custom-control-label" for="#{year}-4" #{year}
-                div
+                                    input type="checkbox" class="custom-control-input" value="#{year}" id="#{year}-6" name="years[]" checked=true
+                                    label class="custom-control-label" for="#{year}-6" #{year}
+                div id="offer-acceptance-ratios_submit"
                     button type="submit" class="btn btn-primary button--submit ml-2" Apply
