--- a/app/views/dashboard/overview/hires/_years-control.html.slim
+++ b/app/views/dashboard/overview/hires/_years-control.html.slim
@@ -1,4 +1,5 @@
-= form_tag(charts_overview_change_years_graph_settings_path, remote: true) do 
+/ = form_tag(charts_overview_change_years_graph_settings_path, remote: true) do 
+form id="years-hires_form"
     div class="container-fluid mb-3 px-0"
         div class="row"
             div class="col-12 col-sm-5"
@@ -12,5 +13,5 @@
                                 div class="custom-control custom-checkbox"
                                     input type="checkbox" class="custom-control-input" value="#{year}" id="#{year}-2" name="years[]" checked=true
                                     label class="custom-control-label" for="#{year}-2" #{year}
-                div
+                div id="years-hires_submit" 
                     button type="submit" class="btn btn-primary button--submit ml-2" Apply
