--- a/app/views/dashboard/overview/hires/_years-graph.html.slim
+++ b/app/views/dashboard/overview/hires/_years-graph.html.slim
@@ -1,5 +1,2 @@
-div id="years-hires-graph"
-    = render_hires_ordered_by_years(@years)
-
-/ [{name: "Series 1", data: {Hires:54}}, {name: "Series 2", data: {Hires: 45}}]
-/ [["Football", 10], ["Basketball", 5]]
+div
+    = render_hires_ordered_by_years(@years_v2)
