--- a/app/views/dashboard/overview/hires/_years-months-graph.html.slim
+++ b/app/views/dashboard/overview/hires/_years-months-graph.html.slim
@@ -1,3 +1,3 @@
-div id="years-months-hires-graph"
-    = render_hires_years_months(@graph_type, @years)
+div 
+    = render_hires_years_months(@graph_type, @years_v1)
     
