--- a/app/views/dashboard/overview/offers/_year-offer-acceptance-ratio-control.html.slim
+++ b/app/views/dashboard/overview/offers/_year-offer-acceptance-ratio-control.html.slim
@@ -1,4 +1,5 @@
-= form_tag(charts_overview_change_year_ratio_settings_path, remote: true) do 
+/ = form_tag(charts_overview_change_year_ratio_settings_path, remote: true) do 
+form id="year-offer-acceptance-ratio_form"
     div class="container-fluid px-0"
         div class="row"
             div class="col-12 d-flex justify-content-end"
