change update method for gauges

--- a/app/views/dashboard/overview/offers/_year-offer-acceptance-ratio-control.html.slim
+++ b/app/views/dashboard/overview/offers/_year-offer-acceptance-ratio-control.html.slim
@@ -15,4 +15,4 @@ form id="year-offer-acceptance-ratio_form"
                                         input type="radio" class="custom-control-input" value="#{year}" id="#{year}-4" name="year"
                                     label class="custom-control-label" for="#{year}-4" #{year}
                 div
-                    button type="submit" class="btn btn-primary button--submit ml-2" Apply
+                    button type="submit" id="year-offer-acceptance-ratio_submit" class="btn btn-primary button--submit ml-2" Apply
