--- a/app/views/dashboard/overview/offers/_year-offer-acceptance-ratio-year.html.slim
+++ b/app/views/dashboard/overview/offers/_year-offer-acceptance-ratio-year.html.slim
@@ -1,1 +1,1 @@
-p class="text-center mt-4" id="offer-acceptance-ratio_year" #{offer_acceptance_ratio_data_for_year(current: true)[:year]}
+p class="text-center mt-4" id="offer-acceptance-ratio_year" #{offer_acceptance_ratio_data_for_year(current: true)[:date]}
