add notification bar

--- a/app/views/layouts/dashboard.html.slim
+++ b/app/views/layouts/dashboard.html.slim
@@ -14,6 +14,7 @@ html
     div class="dashboard"
         = render "shared/sidebar"
         div class="dashboard_content" 
+            = render "shared/update_notification"
             button data-toggle="collapse" data-target="#collapsed-menu" class="dashboard_toggle-menu-button btn btn-primary"
                 i class="fas fa-bars" 
             div class="collapse" id="collapsed-menu"
