--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,8 +12,6 @@
  *
  */
 
-
-
 @import 'custom';
 @import 'bootstrap';
 @import 'buttons';
@@ -21,4 +19,5 @@
 @import 'dashboard';
 @import 'sidebar';
 @import 'gauge';
+@import 'hires';
 @import 'notifications'
