--- a/app/views/dashboard/overview/hires/_hires-stats-control.html.slim
+++ b/app/views/dashboard/overview/hires/_hires-stats-control.html.slim
@@ -2,7 +2,7 @@ div class="container-fluid mb-3 px-0"
     div class="row"
         div class="col-12 d-flex justify-content-end"
             div class="dropdown"
-                button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Type
+                button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Stat
                 div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton"
                     div class="dropdown-item" 
                         div class="custom-control custom-radio"
@@ -14,7 +14,7 @@ div class="container-fluid mb-3 px-0"
                             label class="custom-control-label" for="customRadio2" Bar
             form id="years-months-hires_form"                
                 div class="dropdown ml-2"
-                    button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Years
+                    button class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" Year
                     div class="dropdown-menu dropdown-menu-right"
                         - get_years.each do |year| 
                             div class="dropdown-item"
