edit hires statistics view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,10 @@
  *
  */
 
+/*
+*= require material_icons
+*/
+
 @import 'custom';
 @import 'bootstrap';
 @import 'buttons';
@@ -20,4 +24,6 @@
 @import 'sidebar';
 @import 'gauge';
 @import 'hires';
-@import 'notifications'
+@import 'notifications';
+
+
