--- a/app/assets/stylesheets/_hires.scss
+++ b/app/assets/stylesheets/_hires.scss
@@ -1,27 +1,28 @@
 .hires-stats_container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
     background-color: #3365cc;
-    height: 18rem;
-    flex-direction: column;
+    // height: 18rem;
+    // flex-direction: column;
+    padding: 1.5rem;
     color: white;
 }
 
 .hires-stats_stat{
     display: flex;
-    margin-top: 1.7rem;
-    margin-bottom: 1.4rem;
+    // margin-top: 1.7rem;
+    // margin-bottom: 1.4rem;
 }
 
 .hires-stats_number{
-    font-size: 2.4rem !important;
+    font-size: 2.3rem !important;
     font-weight: 500;
     width: fit-content;
 }
 
 .hires-stats_stat-text{
-    font-size: 1.2rem !important;
+    font-size: 1.1rem !important;
     width: fit-content;
     margin-bottom: .7rem;
     font-family: sans-serif;
@@ -37,6 +38,20 @@
 
 
 .hires-stats_description{
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: 300;
+}
+
+.hires-stats_stat{
+    display: flex; 
+}
+
+.hires-stats_component{
+    display: flex; 
+    flex-direction: column
+}
+
+
+.hires-stats_icon{
+    font-size: 4rem;
 }
