--- a/app/views/dashboard/overview/hires/_hires-stats.html.slim
+++ b/app/views/dashboard/overview/hires/_hires-stats.html.slim
@@ -1,6 +1,22 @@
+div class="hires-stats_container mb-1"
+    div class="row"
+        div class="col-12 col-md-8"
+            div class="hires-stats_component"
+                div class="hires-stats_stat"
+                    h1 class="hires-stats_number" 45
+                    p class="hires-stats_stat-text" hires
+                h4 class="hires-stats_description" avg per month
+        div class="col-12 col-md-4"
+            <i class="material-icons hires-stats_icon">trending_up</i>
+        
+
 div class="hires-stats_container"
-    h3 class="hires-stats_date" #{hires_statistic(current: true)[:date]}
-    div class="hires-stats_stat"
-        h1 class="hires-stats_number" #{hires_statistic(current: true)[:value]} 
-        p class="hires-stats_stat-text" hires
-    h4 class="hires-stats_description" #{hires_statistic(current: true)[:statistic]} per month
+    div class="row"
+        div class="col-12 col-md-8"
+            div class="hires-stats_component"
+                div class="hires-stats_stat"
+                    h1 class="hires-stats_number" 30
+                    p class="hires-stats_stat-text" hires
+                h4 class="hires-stats_description" median per month
+        div class="col-12 col-md-4"
+            <i class="material-icons hires-stats_icon">equalizer</i>
